; ModuleID = '/home/carl/AnghaBench/systemd/src/journal/extr_test-journal-interleaving.c_setup_sequential.c'
source_filename = "/home/carl/AnghaBench/systemd/src/journal/extr_test-journal-interleaving.c_setup_sequential.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [12 x i8] c"one.journal\00", align 1
@.str.1 = private unnamed_addr constant [12 x i8] c"two.journal\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @setup_sequential to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @setup_sequential() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = call i32* @test_open(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  store i32* %3, i32** %1, align 8
  %4 = call i32* @test_open(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0))
  store i32* %4, i32** %2, align 8
  %5 = load i32*, i32** %1, align 8
  %6 = call i32 @append_number(i32* %5, i32 1, i32* null)
  %7 = load i32*, i32** %1, align 8
  %8 = call i32 @append_number(i32* %7, i32 2, i32* null)
  %9 = load i32*, i32** %2, align 8
  %10 = call i32 @append_number(i32* %9, i32 3, i32* null)
  %11 = load i32*, i32** %2, align 8
  %12 = call i32 @append_number(i32* %11, i32 4, i32* null)
  %13 = load i32*, i32** %1, align 8
  %14 = call i32 @test_close(i32* %13)
  %15 = load i32*, i32** %2, align 8
  %16 = call i32 @test_close(i32* %15)
  ret void
}

declare dso_local i32* @test_open(i8*) #1

declare dso_local i32 @append_number(i32*, i32, i32*) #1

declare dso_local i32 @test_close(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
